automata/.antlr/AbstractMachineParser.py
# Generated from d:/GitHub/CSC615M-Abstract-Machine-Interpreter/automata/AbstractMachineParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AbstractMachineParser ( Parser ):

    grammarFileName = "AbstractMachineParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.DATA'", "'STACK'", "'QUEUE'", "'TAPE'", 
                     "'2D_TAPE'", "'.LOGIC'", "'SCAN'", "'PRINT'", "'SCAN RIGHT'", 
                     "'SCAN LEFT'", "'READ'", "'WRITE'", "'RIGHT'", "'LEFT'", 
                     "'UP'", "'DOWN'", "','", "']'", "'('", "')'", "'/'" ]

    symbolicNames = [ "<INVALID>", "DATA", "STACK", "QUEUE", "TAPE", "TAPE_2D", 
                      "LOGIC", "SCAN", "PRINT", "SCAN_RIGHT", "SCAN_LEFT", 
                      "READ", "WRITE", "RIGHT", "LEFT", "UP", "DOWN", "COMMA", 
                      "CLOSE_BRACKET", "OPEN_PAR", "CLOSE_PAR", "SLASH", 
                      "SYMBOL", "IDENTIFIER", "WS" ]

    RULE_program = 0
    RULE_identifier = 1
    RULE_memory_declaration = 2
    RULE_logic_declaration = 3
    RULE_command = 4
    RULE_memory_operation = 5
    RULE_tape_operation = 6
    RULE_transition = 7
    RULE_replacement = 8

    ruleNames =  [ "program", "identifier", "memory_declaration", "logic_declaration", 
                   "command", "memory_operation", "tape_operation", "transition", 
                   "replacement" ]

    EOF = Token.EOF
    DATA=1
    STACK=2
    QUEUE=3
    TAPE=4
    TAPE_2D=5
    LOGIC=6
    SCAN=7
    PRINT=8
    SCAN_RIGHT=9
    SCAN_LEFT=10
    READ=11
    WRITE=12
    RIGHT=13
    LEFT=14
    UP=15
    DOWN=16
    COMMA=17
    CLOSE_BRACKET=18
    OPEN_PAR=19
    CLOSE_PAR=20
    SLASH=21
    SYMBOL=22
    IDENTIFIER=23
    WS=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AbstractMachineParser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FullProgramContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LOGIC(self):
            return self.getToken(AbstractMachineParser.LOGIC, 0)
        def DATA(self, i:int=None):
            if i is None:
                return self.getTokens(AbstractMachineParser.DATA)
            else:
                return self.getToken(AbstractMachineParser.DATA, i)
        def logic_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbstractMachineParser.Logic_declarationContext)
            else:
                return self.getTypedRuleContext(AbstractMachineParser.Logic_declarationContext,i)

        def memory_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbstractMachineParser.Memory_declarationContext)
            else:
                return self.getTypedRuleContext(AbstractMachineParser.Memory_declarationContext,i)




    def program(self):

        localctx = AbstractMachineParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            localctx = AbstractMachineParser.FullProgramContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 18
                self.match(AbstractMachineParser.DATA)
                self.state = 20 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 19
                    self.memory_declaration()
                    self.state = 22 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 60) != 0)):
                        break

                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 29
            self.match(AbstractMachineParser.LOGIC)
            self.state = 31 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self.logic_declaration()
                self.state = 33 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==22 or _la==23):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AbstractMachineParser.RULE_identifier

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SymbolAsIdentifierContext(IdentifierContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.IdentifierContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SYMBOL(self):
            return self.getToken(AbstractMachineParser.SYMBOL, 0)


    class IdentifierRealContext(IdentifierContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.IdentifierContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(AbstractMachineParser.IDENTIFIER, 0)



    def identifier(self):

        localctx = AbstractMachineParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_identifier)
        try:
            self.state = 37
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                localctx = AbstractMachineParser.IdentifierRealContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.match(AbstractMachineParser.IDENTIFIER)
                pass
            elif token in [22]:
                localctx = AbstractMachineParser.SymbolAsIdentifierContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self.match(AbstractMachineParser.SYMBOL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Memory_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STACK(self):
            return self.getToken(AbstractMachineParser.STACK, 0)

        def IDENTIFIER(self):
            return self.getToken(AbstractMachineParser.IDENTIFIER, 0)

        def QUEUE(self):
            return self.getToken(AbstractMachineParser.QUEUE, 0)

        def TAPE(self):
            return self.getToken(AbstractMachineParser.TAPE, 0)

        def TAPE_2D(self):
            return self.getToken(AbstractMachineParser.TAPE_2D, 0)

        def getRuleIndex(self):
            return AbstractMachineParser.RULE_memory_declaration




    def memory_declaration(self):

        localctx = AbstractMachineParser.Memory_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_memory_declaration)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.match(AbstractMachineParser.STACK)
                self.state = 40
                self.match(AbstractMachineParser.IDENTIFIER)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.match(AbstractMachineParser.QUEUE)
                self.state = 42
                self.match(AbstractMachineParser.IDENTIFIER)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 43
                self.match(AbstractMachineParser.TAPE)
                self.state = 44
                self.match(AbstractMachineParser.IDENTIFIER)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.match(AbstractMachineParser.TAPE_2D)
                self.state = 46
                self.match(AbstractMachineParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AbstractMachineParser.RULE_logic_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CommandLogicDeclarationContext(Logic_declarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.Logic_declarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(AbstractMachineParser.IdentifierContext,0)

        def CLOSE_BRACKET(self):
            return self.getToken(AbstractMachineParser.CLOSE_BRACKET, 0)
        def command(self):
            return self.getTypedRuleContext(AbstractMachineParser.CommandContext,0)

        def transition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbstractMachineParser.TransitionContext)
            else:
                return self.getTypedRuleContext(AbstractMachineParser.TransitionContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AbstractMachineParser.COMMA)
            else:
                return self.getToken(AbstractMachineParser.COMMA, i)


    class MoveOverTapeLogicDeclarationContext(Logic_declarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.Logic_declarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(AbstractMachineParser.IdentifierContext,0)

        def CLOSE_BRACKET(self):
            return self.getToken(AbstractMachineParser.CLOSE_BRACKET, 0)
        def tape_operation(self):
            return self.getTypedRuleContext(AbstractMachineParser.Tape_operationContext,0)

        def replacement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbstractMachineParser.ReplacementContext)
            else:
                return self.getTypedRuleContext(AbstractMachineParser.ReplacementContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AbstractMachineParser.COMMA)
            else:
                return self.getToken(AbstractMachineParser.COMMA, i)


    class MemoryOperationLogicDeclarationContext(Logic_declarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.Logic_declarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(AbstractMachineParser.IdentifierContext,0)

        def CLOSE_BRACKET(self):
            return self.getToken(AbstractMachineParser.CLOSE_BRACKET, 0)
        def memory_operation(self):
            return self.getTypedRuleContext(AbstractMachineParser.Memory_operationContext,0)

        def transition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbstractMachineParser.TransitionContext)
            else:
                return self.getTypedRuleContext(AbstractMachineParser.TransitionContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AbstractMachineParser.COMMA)
            else:
                return self.getToken(AbstractMachineParser.COMMA, i)



    def logic_declaration(self):

        localctx = AbstractMachineParser.Logic_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_logic_declaration)
        self._la = 0 # Token type
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = AbstractMachineParser.CommandLogicDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.identifier()
                self.state = 50
                self.match(AbstractMachineParser.CLOSE_BRACKET)
                self.state = 51
                self.command()
                self.state = 52
                self.transition()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==17:
                    self.state = 53
                    self.match(AbstractMachineParser.COMMA)
                    self.state = 54
                    self.transition()
                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                localctx = AbstractMachineParser.MemoryOperationLogicDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.identifier()
                self.state = 61
                self.match(AbstractMachineParser.CLOSE_BRACKET)
                self.state = 62
                self.memory_operation()
                self.state = 63
                self.transition()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==17:
                    self.state = 64
                    self.match(AbstractMachineParser.COMMA)
                    self.state = 65
                    self.transition()
                    self.state = 70
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 3:
                localctx = AbstractMachineParser.MoveOverTapeLogicDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.identifier()
                self.state = 72
                self.match(AbstractMachineParser.CLOSE_BRACKET)
                self.state = 73
                self.tape_operation()
                self.state = 74
                self.replacement()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==17:
                    self.state = 75
                    self.match(AbstractMachineParser.COMMA)
                    self.state = 76
                    self.replacement()
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AbstractMachineParser.RULE_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ScanRightCommandContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SCAN_RIGHT(self):
            return self.getToken(AbstractMachineParser.SCAN_RIGHT, 0)


    class ScanCommandContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SCAN(self):
            return self.getToken(AbstractMachineParser.SCAN, 0)


    class PrintCommandContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINT(self):
            return self.getToken(AbstractMachineParser.PRINT, 0)


    class ScanLeftCommandContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbstractMachineParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SCAN_LEFT(self):
            return self.getToken(AbstractMachineParser.SCAN_LEFT, 0)



    def command(self):

        localctx = AbstractMachineParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_command)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                localctx = AbstractMachineParser.ScanCommandContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.match(AbstractMachineParser.SCAN)
                pass
            elif token in [8]:
                localctx = AbstractMachineParser.PrintCommandContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.match(AbstractMachineParser.PRINT)
                pass
            elif token in [9]:
                localctx = AbstractMachineParser.ScanRightCommandContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.match(AbstractMachineParser.SCAN_RIGHT)
                pass
            elif token in [10]:
                localctx = AbstractMachineParser.ScanLeftCommandContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.match(AbstractMachineParser.SCAN_LEFT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Memory_operationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(AbstractMachineParser.READ, 0)

        def OPEN_PAR(self):
            return self.getToken(AbstractMachineParser.OPEN_PAR, 0)

        def identifier(self):
            return self.getTypedRuleContext(AbstractMachineParser.IdentifierContext,0)


        def CLOSE_PAR(self):
            return self.getToken(AbstractMachineParser.CLOSE_PAR, 0)

        def WRITE(self):
            return self.getToken(AbstractMachineParser.WRITE, 0)

        def getRuleIndex(self):
            return AbstractMachineParser.RULE_memory_operation




    def memory_operation(self):

        localctx = AbstractMachineParser.Memory_operationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_memory_operation)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(AbstractMachineParser.READ)
                self.state = 91
                self.match(AbstractMachineParser.OPEN_PAR)
                self.state = 92
                self.identifier()
                self.state = 93
                self.match(AbstractMachineParser.CLOSE_PAR)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(AbstractMachineParser.WRITE)
                self.state = 96
                self.match(AbstractMachineParser.OPEN_PAR)
                self.state = 97
                self.identifier()
                self.state = 98
                self.match(AbstractMachineParser.CLOSE_PAR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tape_operationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RIGHT(self):
            return self.getToken(AbstractMachineParser.RIGHT, 0)

        def OPEN_PAR(self):
            return self.getToken(AbstractMachineParser.OPEN_PAR, 0)

        def identifier(self):
            return self.getTypedRuleContext(AbstractMachineParser.IdentifierContext,0)


        def CLOSE_PAR(self):
            return self.getToken(AbstractMachineParser.CLOSE_PAR, 0)

        def LEFT(self):
            return self.getToken(AbstractMachineParser.LEFT, 0)

        def UP(self):
            return self.getToken(AbstractMachineParser.UP, 0)

        def DOWN(self):
            return self.getToken(AbstractMachineParser.DOWN, 0)

        def getRuleIndex(self):
            return AbstractMachineParser.RULE_tape_operation




    def tape_operation(self):

        localctx = AbstractMachineParser.Tape_operationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tape_operation)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(AbstractMachineParser.RIGHT)
                self.state = 103
                self.match(AbstractMachineParser.OPEN_PAR)
                self.state = 104
                self.identifier()
                self.state = 105
                self.match(AbstractMachineParser.CLOSE_PAR)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(AbstractMachineParser.LEFT)
                self.state = 108
                self.match(AbstractMachineParser.OPEN_PAR)
                self.state = 109
                self.identifier()
                self.state = 110
                self.match(AbstractMachineParser.CLOSE_PAR)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.match(AbstractMachineParser.UP)
                self.state = 113
                self.match(AbstractMachineParser.OPEN_PAR)
                self.state = 114
                self.identifier()
                self.state = 115
                self.match(AbstractMachineParser.CLOSE_PAR)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 4)
                self.state = 117
                self.match(AbstractMachineParser.DOWN)
                self.state = 118
                self.match(AbstractMachineParser.OPEN_PAR)
                self.state = 119
                self.identifier()
                self.state = 120
                self.match(AbstractMachineParser.CLOSE_PAR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PAR(self):
            return self.getToken(AbstractMachineParser.OPEN_PAR, 0)

        def SYMBOL(self):
            return self.getToken(AbstractMachineParser.SYMBOL, 0)

        def COMMA(self):
            return self.getToken(AbstractMachineParser.COMMA, 0)

        def identifier(self):
            return self.getTypedRuleContext(AbstractMachineParser.IdentifierContext,0)


        def CLOSE_PAR(self):
            return self.getToken(AbstractMachineParser.CLOSE_PAR, 0)

        def getRuleIndex(self):
            return AbstractMachineParser.RULE_transition




    def transition(self):

        localctx = AbstractMachineParser.TransitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_transition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(AbstractMachineParser.OPEN_PAR)
            self.state = 125
            self.match(AbstractMachineParser.SYMBOL)
            self.state = 126
            self.match(AbstractMachineParser.COMMA)
            self.state = 127
            self.identifier()
            self.state = 128
            self.match(AbstractMachineParser.CLOSE_PAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReplacementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PAR(self):
            return self.getToken(AbstractMachineParser.OPEN_PAR, 0)

        def SYMBOL(self, i:int=None):
            if i is None:
                return self.getTokens(AbstractMachineParser.SYMBOL)
            else:
                return self.getToken(AbstractMachineParser.SYMBOL, i)

        def SLASH(self):
            return self.getToken(AbstractMachineParser.SLASH, 0)

        def COMMA(self):
            return self.getToken(AbstractMachineParser.COMMA, 0)

        def identifier(self):
            return self.getTypedRuleContext(AbstractMachineParser.IdentifierContext,0)


        def CLOSE_PAR(self):
            return self.getToken(AbstractMachineParser.CLOSE_PAR, 0)

        def getRuleIndex(self):
            return AbstractMachineParser.RULE_replacement




    def replacement(self):

        localctx = AbstractMachineParser.ReplacementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_replacement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(AbstractMachineParser.OPEN_PAR)
            self.state = 131
            self.match(AbstractMachineParser.SYMBOL)
            self.state = 132
            self.match(AbstractMachineParser.SLASH)
            self.state = 133
            self.match(AbstractMachineParser.SYMBOL)
            self.state = 134
            self.match(AbstractMachineParser.COMMA)
            self.state = 135
            self.identifier()
            self.state = 136
            self.match(AbstractMachineParser.CLOSE_PAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





